--- a/author.html
+++ b/author.html
@@ -7,10 +7,10 @@
 <h2>Getting input</h2>
 
 <form>
-    <label for="secret_string">The hidden author name</label>
-    <input type ="password" id="secret_string" name="secret_string" min=10 max=50 step=2 value=Dickens> <br>
-    <label for="checkIt">Guess the author</label>
-    <input type ="text" id="checkIt" name="checkIt" autofocus> <br>
+    <label for="String_value">The hidden author name</label>
+    <input type ="password" id="String_value" name="String_value" min=10 max=50 step=2 value=Dickens> <br>
+    <label for="guess_author">Guess the author</label>
+    <input type ="text" id="guess_author" name="guess_author" autofocus> <br>
     <input type="button" onclick="checkAuthor()" value="Check the guess">
 </form>
 <p id="result">This text will be replaced </p>
@@ -19,8 +19,8 @@ let good=0
 let oops=0
 function checkAuthor (){
     console.log("Getting form values")
-    hidden = document.getElementById("secret_string").value
-    guess = document.getElementById("checkIt").value
+    hidden = document.getElementById("String_value").value
+    guess = document.getElementById("guess_author").value
     confirmed = hidden===guess
     
     out = document.getElementById("result")
@@ -34,6 +34,27 @@ function checkAuthor (){
     out.innerHTML = "Correct guess:"+good+" Wrong answer:"+oops
 }
 </script>
+
+<div style="padding: 50px 50px"><img src="vishakapatnam.jpg" id="cities" height="100px" width="100px" onclick="selectImage()"></div>
+    <script>
+        var useImage=1;
+        function selectImage(){
+            switch(useImage){
+                case 1:
+                document.getElementById("city").src="vishakapatnam.jpg"
+                useImage=2;
+                break;
+                case 2:
+                document.getElementById("city").src="Atlanta.jpeg"
+                useImage=3;
+               break;
+                case 3:
+                document.getElementById("city").src="Udaypur.jpeg"
+                useImage=1;
+                break;
+            }
+        }
+    </script>
 
 
 
