Added styles to the pages - bonus

--- a/cruise.html
+++ b/cruise.html
@@ -5,8 +5,8 @@
     </head>
  
     
-<body> 
-    <h1>Kaushik Ram Koteshwar goes on a cruise</h1>
+<body style="background-color: rgb(239, 243, 17);"> 
+    <h1 style="color:black;text-align: center; font-family:sans-serif;">Kaushik Ram Koteshwar goes on a cruise</h1>
     <h2>Getting input</h2>
     
     <div class="container">
