--- a/tips.html
+++ b/tips.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
  
-<body>
+<body style="background-color: rgb(144, 108, 241);">
 
 
     
 <head>
     <title>Tips Web Page</title> 
 </head>
-    <h1>Kaushik Ram Koteshwar Venna shows tip amounts</h1>
+    <h1 style="color:black;text-align: center; font-family:sans-serif;">Kaushik Ram Koteshwar Venna shows tip amounts</h1>
     <div class="container">
         <label for="amount">Enter the base amount</label>
         <input type="number" id="amount" name="amount" value="50">
